--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "bootstrap": "lerna bootstrap",
         "lint:staged": "lerna run lint:staged --stream",
         "lint": "lerna run lint --stream",
-        "manual-version": "lerna version --preid=rc --no-push --no-changelog --no-private",
+        "manual-version:rc": "lerna version --preid=rc --no-push --no-changelog --no-private",
         "prepare": "husky install"
     },
     "devDependencies": {
