chore: Separate lerna version and publish (#1453)
* chore: daily build skip published version (#1475)

* chore: daily build skip published version

* chore: delay more time before pack visx

* chore: fix some code

* chore: fix

* chore: typo

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "bootstrap": "lerna bootstrap",
         "lint:staged": "lerna run lint:staged --stream",
         "lint": "lerna run lint --stream",
-        "version": "lerna bootstrap --ignore-scripts -- --package-lock-only --no-audit && git add packages/*/package-lock.json",
+        "manual-version:rc": "lerna version --preid=rc --no-push --no-changelog --no-private",
         "prepare": "husky install"
     },
     "devDependencies": {
