--- a/lerna.json
+++ b/lerna.json
@@ -5,7 +5,8 @@
         "packages/fx-core",
         "packages/sdk",
         "packages/cli",
-        "packages/vscode-extension"
+        "packages/vscode-extension",
+        "packages/failpoint-ts"
     ],
     "command": {
         "version": {
