ci: use the self-hosted runner

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -20,10 +20,10 @@ jobs:
 
     strategy:
       matrix:
-        os: [windows-latest]
+        os: [linux]
         node-version: [14]
 
-    runs-on: ${{ matrix.os }}
+    runs-on: [self-hosted, ${{ matrix.os }}, 8cpu]
 
     steps:
       - name: Checkout
