--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -68,14 +68,6 @@ jobs:
         run: |
           npx lerna run test:e2e:clean
 
-      - name: E2E Test Smoke Cases
+      - name: E2E Test in Parallel
         run: |
-          npx lerna run test:e2e:smoke
-
-      - name: E2E Test Other Cases
-        run: |
-          npx lerna run test:e2e:others
-
-      - name: E2E Test Apim Cases
-        run: |
-          npx lerna run test:e2e:apim
+          npx lerna run test:e2e:parallel
