--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   e2e-tests:
-    name: run e2e test on (${{ matrix.os }} node ${{ matrix.node-version }}) with source code
+    name: run e2e test on (self-hosted linux 8cpu node14)
     env:
       AZURE_ACCOUNT_NAME: ${{ secrets.TEST_USER_NAME }}
       AZURE_ACCOUNT_PASSWORD: ${{ secrets.TEST_USER_PASSWORD }}
@@ -18,12 +18,7 @@ jobs:
       M365_TENANT_ID: ${{ secrets.TEST_TENANT_ID_2 }}
       CI_ENABLED: "true"
 
-    strategy:
-      matrix:
-        os: [windows-latest]
-        node-version: [14]
-
-    runs-on: ${{ matrix.os }}
+    runs-on: [self-hosted, linux, 8cpu]
 
     steps:
       - name: Checkout
@@ -36,7 +31,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v2.1.2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 14
 
       - name: Download Simple Auth bits
         uses: nick-invision/retry@v2
@@ -73,14 +68,6 @@ jobs:
         run: |
           npx lerna run test:e2e:clean
 
-      - name: E2E Test Smoke Cases
+      - name: E2E Test in Parallel
         run: |
-          npx lerna run test:e2e:smoke
-
-      - name: E2E Test Other Cases
-        run: |
-          npx lerna run test:e2e:others
-
-      - name: E2E Test Apim Cases
-        run: |
-          npx lerna run test:e2e:apim
+          npx lerna run test:e2e:parallel
