--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -503,6 +503,7 @@
     "@types/express": "^4.17.11",
     "@types/fs-extra": "^9.0.5",
     "@types/glob": "^7.1.3",
+    "@types/keytar": "^4.4.2",
     "@types/mocha": "^8.0.0",
     "@types/node": "^12.11.7",
     "@types/react": "^17.0.3",
