chore(sdk): add coverage for node unit tests (#1472)
* chore(sdk): add coverage for node unit tests

* chore(sdk): remove integration wording

* chore(sdk): add nycrc

--- a/packages/sdk/.nycrc
+++ b/packages/sdk/.nycrc
@@ -1,10 +1,6 @@
 {
     "include": [
-      "dist-esm/src/**/*.js"
-    ],
-    "exclude": [
-      "**/*.d.ts",
-      "dist-esm/src/generated/*"
+      "src/**/*.ts"
     ],
     "reporter": [
       "text-summary",
@@ -16,4 +12,4 @@
     "produce-source-map": true,
     "instrument": true,
     "all": true
-  }
+}
