--- a/.github/workflows/download-simpleauth/action.yml
+++ b/.github/workflows/download-simpleauth/action.yml
@@ -4,16 +4,6 @@ runs:
     using: "composite"
     steps:
       - name: Download Simple Auth bits
-        uses: nick-invision/retry@v2
-        with:
-          timeout_minutes: 10
-          max_attempts: 10
-          retry_on: error
-          shell: pwsh
-          command: |
-            $version=Get-Content packages/fx-core/templates/plugins/resource/simpleauth/version.txt
-            $tag = "simpleauth@"+$version
-            $fileName="Microsoft.TeamsFx.SimpleAuth_$version.zip"
-            $url = "https://github.com/OfficeDev/TeamsFx/releases/download/"+$tag+"/"+$fileName
-            Invoke-WebRequest $url -OutFile packages/fx-core/templates/plugins/resource/simpleauth/SimpleAuth.zip
-
+        shell: pwsh
+        run: |
+          ./.github/workflows/download-simpleauth/downloadWithRetry.ps1
