chore: run success

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -28,7 +28,13 @@ jobs:
           dotnet-version: 3.1.x
 
       - name: Download Simple Auth bits
-        uses: ./.github/workflows/download-simpleauth
+        run: |
+          $version=Get-Content packages/fx-core/templates/plugins/resource/simpleauth/version.txt
+          $tag = "simpleauth@"+$version
+          $fileName="Microsoft.TeamsFx.SimpleAuth_$version.zip"
+          $url = "https://github.com/OfficeDev/TeamsFx/releases/download/"+$tag+"/"+$fileName
+          Invoke-WebRequest $url -OutFile packages/fx-core/templates/plugins/resource/simpleauth/SimpleAuth.zip
+        shell: pwsh
 
       - name: Setup project
         run: |
@@ -65,7 +71,13 @@ jobs:
           dotnet-version: 3.1.x
 
       - name: Download Simple Auth bits
-        uses: ./.github/workflows/download-simpleauth
+        run: |
+          $version=Get-Content packages/fx-core/templates/plugins/resource/simpleauth/version.txt
+          $tag = "simpleauth@"+$version
+          $fileName="Microsoft.TeamsFx.SimpleAuth_$version.zip"
+          $url = "https://github.com/OfficeDev/TeamsFx/releases/download/"+$tag+"/"+$fileName
+          Invoke-WebRequest $url -OutFile packages/fx-core/templates/plugins/resource/simpleauth/SimpleAuth.zip
+        shell: pwsh
 
       - name: Setup project
         run: |
