--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -86,7 +86,14 @@ jobs:
         run: rm -rf ./*.zip && git clean -df
 
       - name: Download Simple Auth bits
-        uses: ./.github/workflows/download-simpleauth
+        uses: nick-invision/retry@v2
+        with:
+          timeout_minutes: 10
+          max_attempts: 10
+          retry_on: error
+          shell: pwsh
+          command: |
+            ./.github/scripts/downloadSimpleAuth.ps1
 
       - name: Setup project
         run: |
