--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -34,7 +34,14 @@ jobs:
           node-version: 14
 
       - name: Download Simple Auth bits
-        uses: ./.github/workflows/download-simpleauth
+        uses: nick-invision/retry@v2
+        with:
+          timeout_minutes: 10
+          max_attempts: 10
+          retry_on: error
+          shell: pwsh
+          command: |
+            ./.github/scripts/downloadSimpleAuth.ps1
 
       - name: Setup project
         uses: nick-invision/retry@v2
