--- a/.github/workflows/vsce.yml
+++ b/.github/workflows/vsce.yml
@@ -26,7 +26,14 @@ jobs:
           echo "${{ secrets.NPMRC }}" > ~/.npmrc
           
       - name: Download Simple Auth bits
-        uses: ./.github/workflows/download-simpleauth
+        uses: nick-invision/retry@v2
+        with:
+          timeout_minutes: 10
+          max_attempts: 10
+          retry_on: error
+          shell: pwsh
+          command: |
+            ./.github/scripts/downloadSimpleAuth.ps1
 
       - name: Setup project
         run: |
