chore: extract download simple auth as a single action (#1500)
* chore: extract download simple auth as a single action

* chore: update code

* chore: fix name

* chore: run success

* chore: extract

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -93,11 +93,7 @@ jobs:
           retry_on: error
           shell: pwsh
           command: |
-            $version=Get-Content packages/fx-core/templates/plugins/resource/simpleauth/version.txt
-            $tag = "simpleauth@"+$version
-            $fileName="Microsoft.TeamsFx.SimpleAuth_$version.zip"
-            $url = "https://github.com/OfficeDev/TeamsFx/releases/download/"+$tag+"/"+$fileName
-            Invoke-WebRequest $url -OutFile packages/fx-core/templates/plugins/resource/simpleauth/SimpleAuth.zip
+            ./.github/scripts/downloadSimpleAuth.ps1
 
       - name: Setup project
         run: |
