--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -14,6 +14,7 @@
     "test:aad": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/resource/aad/**/*.test.ts",
     "test:simpleauth": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/resource/simpleauth/**/*.test.ts",
     "test:appstudio": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/resource/appstudio/**/*.test.ts",
+    "test:spfx": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/resource/spfx/**/*.test.ts",
     "test:actions": "echo 'to be implemented'",
     "test:unit": "nyc --check-coverage --reporter=html --reporter=json-summary --reporter=text mocha --no-timeouts --require ts-node/register tests/**/*.test.ts",
     "test:solution": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/solution/*.test.ts",
