--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -51,6 +51,7 @@
     "@types/fs-extra": "^8.0.1",
     "@types/glob": "^7.1.3",
     "@types/inquirer": "^7.3.1",
+    "@types/keytar": "^4.4.2",
     "@types/lodash": "^4.14.170",
     "@types/md5": "^2.3.0",
     "@types/mocha": "^8.0.4",
@@ -109,6 +110,7 @@
     "fs-extra": "^9.1.0",
     "glob": "^7.1.6",
     "inquirer": "^8.0.0",
+    "keytar": "^7.7.0",
     "md5": "^2.3.0",
     "ms-rest-azure": "^3.0.0",
     "node-machine-id": "^1.1.12",
