chore(core): add fail point

--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -19,7 +19,8 @@
     "test:solution": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/solution/*.test.ts",
     "test:core": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/core/*.test.ts",
     "clean": "rm -rf build",
-    "build": "rimraf build && tsc -p ./",
+    "build": "rimraf build && npx tsc -p ./",
+    "build-failpoint": "rimraf build && npx ttsc -p ./",
     "eslint:fix": "eslint package.json tsconfig.json src test --ext .ts --fix",
     "prepare": "npm run build && node ./scripts/download-templates-zip.js",
     "prepublishOnly": "npm run test:unit && npm run build",
@@ -123,6 +124,7 @@
     "ts-loader": "^8.0.3",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
+    "ttypescript": "^1.5.12",
     "typedoc": "^0.20.35",
     "typescript": "^4.2.3",
     "webpack": "^4.44.1",
