--- a/packages/fx-core/tsconfig.json
+++ b/packages/fx-core/tsconfig.json
@@ -17,7 +17,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "jsx": "react",
-    "declaration": true
+    "declaration": true,
+    "plugins": [{ "transform": "../failpoint-ts/src/transformer.ts" }]
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/tests/*"]
