--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -14,6 +14,7 @@
     "test:aad": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/resource/aad/**/*.test.ts",
     "test:simpleauth": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/resource/simpleauth/**/*.test.ts",
     "test:sql": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/resource/sql/**/*.test.ts",
+    "test:identity": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/resource/identity/**/*.test.ts",
     "test:appstudio": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/resource/appstudio/**/*.test.ts",
     "test:spfx": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/resource/spfx/**/*.test.ts",
     "test:actions": "echo 'to be implemented'",
