--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
     "devDependencies": {
         "@commitlint/cli": "^12.0.1",
         "@commitlint/config-conventional": "^12.0.1",
-        "lerna": "^4.0.0",
-        "husky": "^6.0.0"
+        "commitizen": "^4.2.4",
+        "cz-conventional-changelog": "^3.3.0",
+        "husky": "^6.0.0",
+        "lerna": "^4.0.0"
     },
     "bin": {
         "teamsfx": "./packages/cli/cli.js"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     }
 }
