--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -12,13 +12,12 @@
     "url": "git+https://github.com/OfficeDev/TeamsFx.git"
   },
   "scripts": {
-    "prepare": "npm run build",
     "copy-files": "copyfiles -u 1 src/**/*.html src/**/*.css lib/",
     "build": "rimraf lib && tsc -p ./ && npm run copy-files",
     "watch": "rimraf lib && npm run copy-files && tsc -w -p ./",
     "package": "rimraf lib && npx webpack --mode production --config ./webpack.config.js",
-    "prepack": "npm run test:unit && npm run test:integration && npm run package",
-    "test:e2e": "npm run test:e2e:clean && npm run test:e2e:smoke && npm run test:e2e:others",
+    "prepack": "npm run package",
+    "test:e2e": "npm run test:e2e:clean && npm run test:e2e:parallel",
     "test:e2e:clean": "ts-node tests/e2e/clean.ts",
     "test:e2e:parallel": "mocha --no-timeouts --parallel --require ts-node/register tests/e2e/**/*.tests.ts",
     "test:e2e:smoke": "mocha --no-timeouts --require ts-node/register tests/e2e/smoke/*.tests.ts",
