--- a/packages/azdo-tasks/teams-app-cicd/buildandreleasetask/package.json
+++ b/packages/azdo-tasks/teams-app-cicd/buildandreleasetask/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@microsoft/teamsfx-cli": "^0.2.1",
     "azure-pipelines-task-lib": "^3.1.4",
     "fs-extra": "^10.0.0"
   },
