ci: test no --hoist

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Setup project
         run:
-          npm run setup
+          npm install && npm run bootstrap
 
       - name: Package CLI and install
         run: |
