--- a/packages/azdo-tasks/teams-app-cicd/buildandreleasetask/package.json
+++ b/packages/azdo-tasks/teams-app-cicd/buildandreleasetask/package.json
@@ -2,11 +2,12 @@
   "name": "buildandreleasetask",
   "version": "1.0.0",
   "description": "",
-  "main": "lib/main.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "package": "ncc build --source-map --license licenses.txt",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "all": "npm run build && npm run package"
   },
   "keywords": [],
   "author": "",
