refactor: use IOC framework inversify to manager resource plugins

--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -55,6 +55,7 @@
     "http-close": "^1.0.0",
     "ignore": "^5.1.8",
     "install": "^0.13.0",
+    "inversify": "^5.1.1",
     "js-base64": "^3.6.0",
     "js-yaml": "^4.0.0",
     "jsonschema": "^1.4.0",
@@ -67,6 +68,7 @@
     "node-ts-uuid": "^1.0.8",
     "openapi-types": "^7.2.3",
     "proper-lockfile": "^4.1.2",
+    "reflect-metadata": "^0.1.13",
     "semver": "^7.3.4",
     "sudo-prompt": "^9.2.1",
     "tedious": "^9.2.1",
