--- a/packages/fx-core/tsconfig.json
+++ b/packages/fx-core/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "types": ["reflect-metadata"],
     "module": "commonjs",
     "target": "es2017",
     "outDir": "build",
