--- a/packages/github-actions/teams-toolkit-cicd/package.json
+++ b/packages/github-actions/teams-toolkit-cicd/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
+    "@types/mock-fs": "^4.13.1",
     "@types/node": "^14.14.9",
     "@typescript-eslint/parser": "^4.8.1",
     "@vercel/ncc": "^0.25.1",
@@ -41,6 +42,7 @@
     "jest": "^26.6.3",
     "jest-circus": "^26.6.3",
     "js-yaml": "^3.14.0",
+    "mock-fs": "^5.0.0",
     "prettier": "2.2.1",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
