--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -88,9 +88,30 @@ jobs:
         id: git-log
         shell: bash
         run: |
-          git_log=$(git log --pretty="<tr> <td>%h</td> <td>%ad</td> <td>%s</td> <td><a href=\"#\" data-vss-mention=\"version:2.0,fcc6f63a-9b8e-68b0-a9d3-eaf10623d0df\"> %ae &#127867; </a></td> </tr>" e2e..HEAD | grep -v "noreply" | tee | tr -d '\n')
-          echo $git_log
-          echo "::set-output name=log::${git_log[@]}"
+          declare -A email_uid
+          for i in $(git log --pretty="%ae"  e2e..HEAD | sort | uniq);
+          do
+            if [ ${email_uid[$i]+exist} ]; then
+              continue
+            fi
+
+            resp=$(curl -u :${{ secrets.ADO_PAT }} "https://vssps.dev.azure.com/msazure/_apis/identities?searchFilter=General&filterValue=$i&queryMembership=None&api-version=6.0")
+            uid=$(echo $resp | jq '.value | .[] | .id' | xargs echo)
+            email_uid[$i]=$uid
+          done
+          echo ${email_uid[@]}
+
+          gitlog=$(git log --pretty=format:'{"commit":"%h","subject":"%s","email":"%aE","date":"%aD"},' e2e..HEAD | grep -v "noreply")
+          gitlog=[${gitlog::-1}]
+
+          description="<tr> <th>Commit</th> <th>Date</th> <th>Subject</th> <th>Author</th> </tr>"
+          for row in $(echo $gitlog | jq -r '.[] | @base64'); do
+            _jq() {
+              echo ${row} | base64 --decode | jq -r ${1}
+            }
+            description="$description <tr> <td>$(_jq '.commit')</td> <td>$(_jq '.subject')</td> <td>$(_jq '.date')</td> <td><a href=\"#\" data-vss-mention=\"version:2.0,${email_uid[$(_jq '.email')]}\">$(_jq '.email')</a></td> </tr> "
+          done
+          echo "::set-output name=description::$description"
 
       - name: Create azure devops issue if test is failed
         uses: azure/CLI@v1
@@ -107,4 +128,4 @@ jobs:
                              --organization="https://msazure.visualstudio.com/" \
                              --project="Microsoft Teams Extensibility" \
                              --fields="Microsoft.VSTS.TCM.ReproSteps=<a>https://github.com/LongOddCode/lerna-test/actions/runs/${{ github.run_id }}</a>" \
-                             --description="<table class=\"w3-table w3-striped w3-bordered\"><tr><th>Hash</th> <th>Time</th> <th>Message</th> <th>author</th> </tr>${{ steps.git-log.outputs.log }}</table>"
+                             --description="<table class=\"w3-table w3-striped w3-bordered\">${{ steps.git-log.outputs.description }}</table>"
