fix: fix solution

--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -57,7 +57,6 @@
     "http-close": "^1.0.0",
     "ignore": "^5.1.8",
     "install": "^0.13.0",
-    "inversify": "^5.1.1",
     "js-base64": "^3.6.0",
     "js-yaml": "^4.0.0",
     "jsonschema": "^1.4.0",
@@ -75,6 +74,7 @@
     "sudo-prompt": "^9.2.1",
     "tedious": "^9.2.1",
     "tslib": "^2.1.0",
+    "typedi": "^0.10.0",
     "url-parse": "^1.5.1",
     "uuid": "^8.3.2",
     "validator": "^13.1.1",
