test: update nyc coverage config

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -22,7 +22,7 @@
     "test:e2e:parallel": "mocha --no-timeouts --parallel --require ts-node/register tests/e2e/**/*.tests.ts",
     "test:e2e:smoke": "mocha --no-timeouts --require ts-node/register tests/e2e/smoke/*.tests.ts",
     "test:e2e:others": "mocha --no-timeouts --require ts-node/register tests/e2e/{,!(smoke)}/*.tests.ts",
-    "test:unit": "nyc --reporter=html --reporter=json-summary --reporter=text mocha --no-timeouts --require ts-node/register tests/unit/**/*.ts",
+    "test:unit": "nyc mocha --no-timeouts --require ts-node/register tests/unit/**/*.ts",
     "test:integration": "echo 'to be implementd'",
     "check-format": "prettier --list-different --config .prettierrc.json --ignore-path .prettierignore \"{src,tests}/**/*.ts\" \"*.{js,json}\"",
     "format": "prettier --write --config .prettierrc.json --ignore-path .prettierignore \"{src,tests}/**/*.ts\" \"*.{js,json}\"",
@@ -41,6 +41,7 @@
   "aiKey": "1c56be97-bb74-42cf-b04b-8f1aabf04592",
   "devDependencies": {
     "@azure/arm-subscriptions": "^3.0.0",
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@shared/eslint-config": "file:../eslint-config",
     "@shared/prettier-config": "file:../prettier-config",
     "@types/adm-zip": "^0.4.34",
@@ -79,10 +80,11 @@
     "path-browserify": "^1.0.1",
     "sass-loader": "^11.1.1",
     "sinon": "^9.2.2",
+    "source-map-support": "^0.5.19",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.2",
     "ts-loader": "^9.2.2",
-    "ts-node": "^9.0.0",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.2",
     "url-loader": "^4.1.1",
     "uuid": "^8.3.2",
