--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -21,11 +21,12 @@
     "prepare": "npm run build",
     "lint:fix": "eslint \"src/**/*.ts\" \"tests/**/*.ts\" --fix",
     "doc": "typedoc",
-    "test:unit": "nyc --check-coverage --reporter=html --reporter=json-summary --reporter=text mocha --no-timeouts --require ts-node/register tests/**/*.ts",
+    "test:unit": "nyc mocha --no-timeouts --require ts-node/register tests/**/*.ts",
     "prepublishOnly": "npm run test:unit && npm run build",
     "precommit": "lint-staged"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@microsoft/api-documenter": "^7.13.24",
     "@microsoft/api-extractor": "^7.16.1",
     "@shared/eslint-config": "file:../eslint-config",
@@ -45,6 +46,7 @@
     "mocha": "^8.2.1",
     "nyc": "^15.1.0",
     "sinon": "^9.2.2",
+    "source-map-support": "^0.5.19",
     "ts-node": "^9.1.1",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.2.3"
