--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -7,20 +7,19 @@
   "scripts": {
     "lint:staged": "lint-staged",
     "lint": "eslint \"src/**/*.ts\" \"tests/**/*.ts\"",
-    "test:bot": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/resource/bot/**/*.test.ts",
-    "test:function": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/resource/function/**/*.test.ts",
-    "test:localdebug": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/resource/localdebug/**/*.test.ts",
-    "test:frontend": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/resource/frontend/**/*.test.ts",
-    "test:aad": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/resource/aad/**/*.test.ts",
-    "test:simpleauth": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/resource/simpleauth/**/*.test.ts",
-    "test:sql": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/resource/sql/**/*.test.ts",
-    "test:identity": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/resource/identity/**/*.test.ts",
-    "test:appstudio": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/resource/appstudio/**/*.test.ts",
-    "test:spfx": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/resource/spfx/**/*.test.ts",
-    "test:actions": "echo 'to be implemented'",
-    "test:unit": "nyc --check-coverage --reporter=html --reporter=json-summary --reporter=text mocha --no-timeouts --require ts-node/register tests/**/*.test.ts",
-    "test:solution": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/plugins/solution/*.test.ts",
-    "test:core": "nyc --reporter=html --reporter=text mocha --no-timeouts --require ts-node/register tests/core/*.test.ts",
+    "test:bot": "nyc mocha --no-timeouts --require ts-node/register tests/plugins/resource/bot/**/*.test.ts",
+    "test:function": "nyc --no-timeouts --require ts-node/register tests/plugins/resource/function/**/*.test.ts",
+    "test:localdebug": "nyc mocha --no-timeouts --require ts-node/register tests/plugins/resource/localdebug/**/*.test.ts",
+    "test:frontend": "nyc mocha --no-timeouts --require ts-node/register tests/plugins/resource/frontend/**/*.test.ts",
+    "test:aad": "nyc mocha --no-timeouts --require ts-node/register tests/plugins/resource/aad/**/*.test.ts",
+    "test:simpleauth": "nyc mocha --no-timeouts --require ts-node/register tests/plugins/resource/simpleauth/**/*.test.ts",
+    "test:sql": "nyc mocha --no-timeouts --require ts-node/register tests/plugins/resource/sql/**/*.test.ts",
+    "test:identity": "nyc mocha --no-timeouts --require ts-node/register tests/plugins/resource/identity/**/*.test.ts",
+    "test:appstudio": "nyc mocha --no-timeouts --require ts-node/register tests/plugins/resource/appstudio/**/*.test.ts",
+    "test:spfx": "nyc mocha --no-timeouts --require ts-node/register tests/plugins/resource/spfx/**/*.test.ts",
+    "test:unit": "nyc mocha --no-timeouts --require ts-node/register tests/**/*.test.ts",
+    "test:solution": "nyc mocha --no-timeouts --require ts-node/register tests/plugins/solution/*.test.ts",
+    "test:core": "nyc mocha --no-timeouts --require ts-node/register tests/core/*.test.ts",
     "clean": "rm -rf build",
     "build": "rimraf build && tsc -p ./",
     "eslint:fix": "eslint package.json tsconfig.json src test --ext .ts --fix",
@@ -82,6 +81,7 @@
     "@azure/arm-appservice": "^7.0.0",
     "@azure/arm-resources": "^4.0.0",
     "@azure/storage-blob": "^12.5.0",
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@shared/eslint-config": "file:../eslint-config",
     "@shared/prettier-config": "file:../prettier-config",
     "@types/adm-zip": "^0.4.33",
@@ -122,8 +122,9 @@
     "mock-fs": "^4.13.0",
     "nyc": "^15.1.0",
     "sinon": "^9.2.2",
+    "source-map-support": "^0.5.19",
     "ts-loader": "^8.0.3",
-    "ts-node": "^9.0.0",
+    "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "typedoc": "^0.20.35",
     "typescript": "^4.2.3",
