--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -494,6 +494,7 @@
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
     "@fluentui/react": "^8.5.1",
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@shared/eslint-config": "file:../eslint-config",
     "@shared/prettier-config": "file:../prettier-config",
     "@types/adm-zip": "^0.4.33",
@@ -536,6 +537,7 @@
     "ms-rest": "^2.5.4",
     "node-loader": "^2.0.0",
     "node-sass": "^6.0.1",
+    "nyc": "^15.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intl": "^5.13.5",
@@ -549,7 +551,7 @@
     "terser-webpack-plugin": "^4.2.3",
     "tmp": "^0.2.1",
     "ts-loader": "^8.0.3",
-    "ts-node": "^9.0.0",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.4",
     "url-loader": "^4.1.1",
     "uuid": "^8.3.2",
