--- a/packages/github-actions/teams-app-cicd/package.json
+++ b/packages/github-actions/teams-app-cicd/package.json
@@ -27,10 +27,10 @@
   "dependencies": {
     "@actions/core": "^1.2.6",
     "@actions/exec": "^1.1.0",
-    "@microsoft/teamsfx-cli": "0.2.1",
     "fs-extra": "^10.0.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.12",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.9",
     "@typescript-eslint/parser": "^4.8.1",
