--- a/packages/failpoint-ts/tsconfig.json
+++ b/packages/failpoint-ts/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "exclude": ["node_modules", "**/test/*"],
+  "exclude": ["node_modules", "**/test/*", "transformer"],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
