--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -7,19 +7,19 @@
   "scripts": {
     "lint:staged": "lint-staged",
     "lint": "eslint \"src/**/*.ts\" \"tests/**/*.ts\"",
-    "test:bot": "nyc mocha --no-timeouts --require ts-node/register tests/plugins/resource/bot/**/*.test.ts",
-    "test:function": "nyc --no-timeouts --require ts-node/register tests/plugins/resource/function/**/*.test.ts",
-    "test:localdebug": "nyc mocha --no-timeouts --require ts-node/register tests/plugins/resource/localdebug/**/*.test.ts",
-    "test:frontend": "nyc mocha --no-timeouts --require ts-node/register tests/plugins/resource/frontend/**/*.test.ts",
-    "test:aad": "nyc mocha --no-timeouts --require ts-node/register tests/plugins/resource/aad/**/*.test.ts",
-    "test:simpleauth": "nyc mocha --no-timeouts --require ts-node/register tests/plugins/resource/simpleauth/**/*.test.ts",
-    "test:sql": "nyc mocha --no-timeouts --require ts-node/register tests/plugins/resource/sql/**/*.test.ts",
-    "test:identity": "nyc mocha --no-timeouts --require ts-node/register tests/plugins/resource/identity/**/*.test.ts",
-    "test:appstudio": "nyc mocha --no-timeouts --require ts-node/register tests/plugins/resource/appstudio/**/*.test.ts",
-    "test:spfx": "nyc mocha --no-timeouts --require ts-node/register tests/plugins/resource/spfx/**/*.test.ts",
-    "test:unit": "nyc mocha --no-timeouts --require ts-node/register tests/**/*.test.ts",
-    "test:solution": "nyc mocha --no-timeouts --require ts-node/register tests/plugins/solution/*.test.ts",
-    "test:core": "nyc mocha --no-timeouts --require ts-node/register tests/core/*.test.ts",
+    "test:bot": "nyc mocha --no-timeouts --require ts-node/register \"tests/plugins/resource/bot/**/*.test.ts\"",
+    "test:function": "nyc --no-timeouts --require ts-node/register \"tests/plugins/resource/function/**/*.test.ts\"",
+    "test:localdebug": "nyc mocha --no-timeouts --require ts-node/register \"tests/plugins/resource/localdebug/**/*.test.ts\"",
+    "test:frontend": "nyc mocha --no-timeouts --require ts-node/register \"tests/plugins/resource/frontend/**/*.test.ts\"",
+    "test:aad": "nyc mocha --no-timeouts --require ts-node/register \"tests/plugins/resource/aad/**/*.test.ts\"",
+    "test:simpleauth": "nyc mocha --no-timeouts --require ts-node/register \"tests/plugins/resource/simpleauth/**/*.test.ts\"",
+    "test:sql": "nyc mocha --no-timeouts --require ts-node/register \"tests/plugins/resource/sql/**/*.test.ts\"",
+    "test:identity": "nyc mocha --no-timeouts --require ts-node/register \"tests/plugins/resource/identity/**/*.test.ts\"",
+    "test:appstudio": "nyc mocha --no-timeouts --require ts-node/register \"tests/plugins/resource/appstudio/**/*.test.ts\"",
+    "test:spfx": "nyc mocha --no-timeouts --require ts-node/register \"tests/plugins/resource/spfx/**/*.test.ts\"",
+    "test:unit": "nyc mocha --no-timeouts --require ts-node/register \"tests/**/*.test.ts\"",
+    "test:solution": "nyc mocha --no-timeouts --require ts-node/register \"tests/plugins/solution/*.test.ts\"",
+    "test:core": "nyc mocha --no-timeouts --require ts-node/register \"tests/core/*.test.ts\"",
     "clean": "rm -rf build",
     "build": "rimraf build && tsc -p ./",
     "eslint:fix": "eslint package.json tsconfig.json src test --ext .ts --fix",
