--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -5,12 +5,14 @@ on:
     branches:
       - main
       - dev 
-  schedule:
-    - cron: "0 2-10/1 * * *"
+  push:
+    branches:
+      - main
+      - dev
 
 jobs:
   source-branch-test:
-    if: ${{ github.event_name != 'schedule' }}
+    if: ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-latest
     outputs:
       coverages: ${{ steps.unit-test.outputs.coverages }}
@@ -57,7 +59,7 @@ jobs:
           echo "::set-output name=coverages::$coverages"
 
   target-branch-test:
-    if: ${{ github.event_name != 'schedule' }}
+    if: ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-latest
     outputs:
       coverages: ${{ steps.unit-test.outputs.coverages }}
@@ -104,7 +106,6 @@ jobs:
           echo "::set-output name=coverages::$coverages"
 
   compare-coverage:
-    if: ${{ github.event_name != 'schedule' }}
     needs: [source-branch-test, target-branch-test]
     runs-on: ubuntu-latest
     steps:
@@ -133,9 +134,8 @@ jobs:
               fi
             fi
           done
-
   report-coverage:
-    if: ${{ github.event_name == 'schedule' }}
+    if: ${{ github.event_name == 'push' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
