--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          ref: ${{github.event.pull_request.head.ref}}
+          ref: ${{ github.head_ref }}
           repository: ${{github.event.pull_request.head.repo.full_name}}
 
       - name: Setup node
@@ -70,7 +70,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          ref: ${{github.event.pull_request.head.ref}}
+          ref: ${{ github.base_ref }}
           repository: ${{github.event.pull_request.head.repo.full_name}}
 
       - name: Setup node
